--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js "></script>
-  <!--<script src="js/three.js"></script>-->
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js "></script>-->
+  <script src="js/three.js"></script>
   <script src="js/OrbitControls.js"></script>
   <script src="js/physi.js"></script>
   <script src="js/tablero.js"></script>
